<?xml version="1.0"?>
<package format="2">
  <name>gazebo_autoscan</name>
  <version>1.0.0</version>
  <description>The gazebo_autoscan package</description>
  <maintainer email="crypss1412@todo.todo">crypss1412</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gmapping</depend>
</package>
