<?xml version="1.0"?>
<package format="2">
  <name>gazebo_navigation</name>
  <version>1.0.0</version>
  <description>The gazebo_navigation package</description>
  <maintainer email="crypps1412@gmail.com">crypps1412</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
</package>
