<?xml version="1.0"?>
<package format="2">
  <name>gazebo_world</name>
  <version>1.0.0</version>
  <description>The gazebo_world package</description>
  <license>MIT</license>
  <maintainer email="crypps1412@gmail.com">crypps1412</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
